Fix header layout issues in the feature view

--- a/vbridge/client/src/components/FeatureView/index.scss
+++ b/vbridge/client/src/components/FeatureView/index.scss
@@ -255,7 +255,7 @@
     // stroke: #aaa;
 }
 
-.header-buttion {
+.ant-btn-icon-only {
     width: 20px;
 }
 
